--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Building Pipeline for Bioinformatics Data using PluMA</title>
     <style>
+      style="font-size:60px;
       /* Add any styling you want for the report */
       body {
         font-family: Arial, sans-serif;
