--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Building Pipeline for Bioinformatics Data using PluMA</title>
+    <title>Building Pipeline for Bioinformatics Data using PluMA
+    style="font-size:60px;
+    </title>
     <style>
-      style="font-size:60px;
       /* Add any styling you want for the report */
       body {
         font-family: Arial, sans-serif;
