--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Building Pipeline for Bioinformatics Data using PluMA
+    <title>
+      style="font-size:300%;">Building Pipeline for Bioinformatics Data using PluMA
     </title>
     <style>
       /* Add any styling you want for the report */
