--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </head>
   <body>
 
-<h1>Building Pipeline for Bioinformatics Data using PluMA</h1>
+<h1><b>Building Pipeline for Bioinformatics Data using PluMA</b></h1>
 <h2><b> OVERVIEW AND BACKGROUND </b></h2>
       <p>The objective of PluMA is to make it easy for developers to create adaptable and lightweight analysis pipelines. These pipelines allow developers to incorporate new algorithms in their preferred programming language and debug them alongside other stages in the pipeline that might use different file formats and programming languages. To achieve this goal, PluMA uses plugins which are available in a large collection in its plugin pool. These plugins are written in various programming languages and can be executed sequentially to form a pipeline. PluMA allows users to easily add, remove, or replace plugins using its user interface. Since plugins are dynamically loaded, users can download PluMA and only the plugins they require from the plugin pool to assemble their pipeline. Furthermore, PluMA provides plugins for both CPU and GPU implementations.</p>
 <hr>
@@ -157,9 +157,11 @@ Sample.Strain.csv
 	<p>KronaGram: Input for KronaGram plugin is an output file from Kraken2Krona which is a .krona file format and the output is the visualization of the classified DNA Sequences into biological classification. </p>
  		<p>Input Plugin format is written as below</p>
 		<p>Here are the Outputs of 3 different data sequencing samples from European Nucleotide Archive</p>
-		<img src="kronagram1.html” alt="Italian Trulli">
-		<img src="kronagram2.html” alt="Italian Trulli">
-		<img src="kronagram3.html” alt="Italian Trulli">
+		
+<iframe src="kronagram1.html" width="100%" height="500px"></iframe>
+<iframe src="kronagram2.html" width="100%" height="500px"></iframe>
+<iframe src="kronagram3.html" width="100%" height="500px"></iframe>
+
 <hr>
 
 <h2><b> CONCLUSION </b></h2>
