--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@ Sample.Strain.csv
 	 <pre style="background-color:yellow;">plugin KronaGrame inputfile Kronafiles.txt outputfile KronaGram.html</pre> 
 		<p>Here are the Outputs of 3 different data sequencing samples from European Nucleotide Archive</p>
 		
-<iframe src="kronagram1.html" width="100%" height="500px"></iframe>
-<iframe src="kronagram2.html" width="100%" height="500px"></iframe>
-<iframe src="kronagram3.html" width="100%" height="500px"></iframe>
+<iframe src="file:///Users/akshithathorthi/Downloads/Capstone/kronagram/kronagram1.html" width="100%" height="500px"></iframe>
+<iframe src="file:///Users/akshithathorthi/Downloads/Capstone/kronagram/kronagram2.html" width="100%" height="500px"></iframe>
+<iframe src="file:///Users/akshithathorthi/Downloads/Capstone/kronagram/kronagram3.html" width="100%" height="500px"></iframe>
 
 <hr>
 
