--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 diagnostic approach | Nature</a>
 <hr>
        
- <h2><b> OBJECTIVE <b></h2>
+ <h2><b> OBJECTIVE </b></h2>
         <p> The objective of PluMA is to simplify the creation of adaptable and lightweight analysis pipelines that can integrate new algorithms in different programming languages and file formats. PluMA uses plugins, with a collection of pre-existing plugins available, implemented in various programming languages and for both CPU and GPU, that can be run sequentially to form a pipeline. The plugins can be easily added, removed, or replaced through a user interface, and dynamically loaded, enabling users to assemble pipelines quickly and efficiently. Transforming microbiome analysis from individual to community-driven. </p>
 <hr>
         
