--- a/index.html
+++ b/index.html
@@ -180,14 +180,14 @@ Sample.Strain.csv
 
 <h2><b> CONCLUSION </b></h2>
       <p>Below mentioned is a pipeline for the Paper “Microbiome analyses of blood and tissues suggest cancer diagnostic approach | Nature” when raw DNA sequences are given as input and this gives us the classified samples for each biological classification and the types of microbial signatures that come under each classification to easily identify which sample has which microbial signature present in his blood and tissues.So, when we considering healthy DNA samples and if any of the sample is classified to these microbial signatures that means there is a probability that the person is affected with cancer and is in the initial stage Ia or IIC and can be diagnosed in the early stage.</p>
-<pre style="background-color:pink;”>Prefix pipelines/Kraken2/test/ 
-Plugin Kraken2 inputfile testfiles.txt outputfile taxa.krak2
-Plugin Kraken2Translate inputfile parameters.kraken2translate.txt outputfile output.kraken2
-Plugin Kraken2Krona inputfile output.kraken2 outputfile output.krona
-Plugin KronaTree inputfile output.krona outputfile output
-Plugin Krona2CSV inputfile output.krona outputfile sample
-Plugin CSVMerge inputfile files.txt outputfile sample.merged.txt
-Plugin KronaGram inputfile kronafiles.txt outputfile kronagram.html </pre>
+	  <pre style="background-color:pink;”>Prefix pipelines/Kraken2/test/ </pre>
+<pre style="background-color:pink;”>Plugin Kraken2 inputfile testfiles.txt outputfile taxa.krak2</pre>
+<pre style="background-color:pink;”>Plugin Kraken2Translate inputfile parameters.kraken2translate.txt outputfile output.kraken2</pre>
+<pre style="background-color:pink;”>Plugin Kraken2Krona inputfile output.kraken2 outputfile output.krona </pre>
+<pre style="background-color:pink;”>Plugin KronaTree inputfile output.krona outputfile output</pre>
+<pre style="background-color:pink;”>Plugin Krona2CSV inputfile output.krona outputfile sample</pre>
+<pre style="background-color:pink;”>Plugin CSVMerge inputfile files.txt outputfile sample.merged.txt</pre>
+<pre style="background-color:pink;”>Plugin KronaGram inputfile kronafiles.txt outputfile kronagram.html </pre>
 <hr>
 
 <h2><b> FUTURE WORK </b></h2>
