--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body>
-  {
+<style>
+body {
   background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fimages%2Fsearch%2Fhat%2F&psig=AOvVaw0OAvZ7aQKKiVZzqyQRovem&ust=1682791801134000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCPjk7Y6Wzf4CFQAAAAAdAAAAABAJ');
 }
-
+  </style>
 <h2>HTML Image</h2>
 <img src="pic_trulli.jpg" alt="Trulli" width="500" height="333">
 
