--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ Sample.Strain.csv
 	 <p style="background-color:yellow;">plugin KronaGrame inputfile Kronafiles.txt outputfile KronaGram.html</p> 
 		<p>Here are the Outputs of 3 different data sequencing samples from European Nucleotide Archive</p>
 	  <p>Output is shown as below for Human Non-Reference Catalog- Plasma microbiome (HIV-Free)</p>	
-<iframe src="file:///Users/akshithathorthi/Downloads/Capstone/kronagram/kronagram1.html" width="100%" height="500px"></iframe>
+<iframe src="kronagram1.png" width="100%" height="500px"></iframe>
 	  <p>Output is shown as below for Plasma microbiome in prostate cancer (PC) </p>
 <iframe src="file:///Users/akshithathorthi/Downloads/Capstone/kronagram/kronagram2.html" width="100%" height="500px"></iframe>
 	   <p>Output is shown as below for Skin cutaneous melanoma (SKCM) and lung cancer (LC)</p>
