--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@ Sample.Strain.csv
 	  <p>Output is shown as below for Human Non-Reference Catalog- Plasma microbiome (HIV-Free)</p>	
 <iframe src="kronagram1.png" width="100%" height="500px"></iframe>
 	  <p>Output is shown as below for Plasma microbiome in prostate cancer (PC) </p>
-<iframe src="file:///Users/akshithathorthi/Downloads/Capstone/kronagram/kronagram2.html" width="100%" height="500px"></iframe>
+<iframe src="kronagram2.png" width="100%" height="500px"></iframe>
 	   <p>Output is shown as below for Skin cutaneous melanoma (SKCM) and lung cancer (LC)</p>
-<iframe src="file:///Users/akshithathorthi/Downloads/Capstone/kronagram/kronagram3.html" width="100%" height="500px"></iframe>
+<iframe src="kronagram3.png" width="100%" height="500px"></iframe>
 
 <hr>
 
