--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ Human Non-Reference Catalog- Plasma microbiome (HIV-Free)
 Plasma microbiome in prostate cancer (PC)
 Skin cutaneous melanoma (SKCM) and lung cancer (LC)
 </pre>
+<iframe src=“classification.png" width="100%" height="300px"></iframe>
 	  <hr>
       <h1><b> METHODS AND TOOLS </b></h1>
       <p>Below Mentioned are the list of Plugins and why they are used to build pipeline for the Paper.</p>
@@ -120,6 +121,7 @@ tr:nth-child(even) {
 <pre style="background-color:yellow;">plugin Kraken2  inputfile testfiles.txt outputfile taxa.krak2</pre>
 		
 	 <p>Output is shown as below the sequences are classified into human [87.13%] and bacterial [12.87%]</p>
+<iframe src="kraken2.png" width="100%" height="300px"></iframe>
 	
 	 <p>Kraken2Translate: Input for Kraken2Translate plugin is a parameters.kraken2translate.txt which contains the output of Kraken2 with .Krak2 file format and the output is in [.kraken2] format. Kraken2Translate is a file converter to convert .Krak2 file to .Kraken2</p>
 		<p >Input Plugin format and text file format is written as below.</p>
@@ -133,7 +135,7 @@ tr:nth-child(even) {
 		<p>Input Plugin format is written as below</p>
 	<pre style="background-color:yellow;">plugin Kraken2Krona  inputfile output.kraken2 outputfile output.krona</pre> 
 		<p>Output is shown as below </p>
-	 
+	 <iframe src=“Kraken2Krona.png" width="100%" height="300px"></iframe>
 	<p>KronaTree: Input for KronaTree plugin is an output file from Kraken2Krona which is a .krona file format and the output is text file format with the syntax name output. This Plugin Maps into biological classification separately into Kingdom, Phylum, class, order , Family genus, Species,strain. </p>
 		 <p>Input Plugin format is written as below</p>
 	 <pre style="background-color:yellow;">plugin KronaTree inputfile output.krona outputfile output</pre> 
@@ -167,6 +169,7 @@ Sample.Strain.csv
 		<p>Input Plugin format is written as below</p>
 	 <p style="background-color:yellow;">plugin CSVMerge inputfile files.txt outputfile output.merged.csv</p> 
 		<p>Output is shown as below </p>
+<iframe src=“CSVMerge.png" width="100%" height="300px"></iframe>
 	<p>KronaGram: Input for KronaGram plugin is an output file from Kraken2Krona which is a .krona file format and the output is the visualization of the classified DNA Sequences into biological classification. </p>
  		<p>Input Plugin format is written as below</p>
 	 <p style="background-color:yellow;">plugin KronaGrame inputfile Kronafiles.txt outputfile KronaGram.html</p> 
