--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ tr:nth-child(even) {
 <pre style="background-color:yellow;">plugin Kraken2  inputfile testfiles.txt outputfile taxa.krak2</pre>
 		
 	 <p>Output is shown as below the sequences are classified into human [87.13%] and bacterial [12.87%]</p>
-<iframe src="kraken2.png" width="100%" height="300px"></iframe>
+<iframe src="Kraken2.png" width="100%" height="300px"></iframe>
 	
 	 <p>Kraken2Translate: Input for Kraken2Translate plugin is a parameters.kraken2translate.txt which contains the output of Kraken2 with .Krak2 file format and the output is in [.kraken2] format. Kraken2Translate is a file converter to convert .Krak2 file to .Kraken2</p>
 		<p >Input Plugin format and text file format is written as below.</p>
