--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@ Sample.Strain.csv
 	  <p>Output is shown as below for Human Non-Reference Catalog- Plasma microbiome (HIV-Free)</p>	
 <iframe src="kronagram1.png" width="100%" height="300px"></iframe>
 	  <p>Output is shown as below for Plasma microbiome in prostate cancer (PC) </p>
-<iframe src="kronagram2.png" width="100%" height="300px"></iframe>
+<iframe src="Kronagram2.png" width="100%" height="300px"></iframe>
 	   <p>Output is shown as below for Skin cutaneous melanoma (SKCM) and lung cancer (LC)</p>
-<iframe src="kronagram3.png" width="100%" height="300px"></iframe>
+<iframe src="Kronagram3.png" width="100%" height="300px"></iframe>
 
 <hr>
 
