--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Human Non-Reference Catalog- Plasma microbiome (HIV-Free)
 Plasma microbiome in prostate cancer (PC)
 Skin cutaneous melanoma (SKCM) and lung cancer (LC)
 </pre>
-<iframe src=“classification.png" width="100%" height="300px"></iframe>
+<img src=“Classification.png" width="100%" height="300px"> </img>
 	  <hr>
       <h1><b> METHODS AND TOOLS </b></h1>
       <p>Below Mentioned are the list of Plugins and why they are used to build pipeline for the Paper.</p>
@@ -135,9 +135,9 @@ tr:nth-child(even) {
 	 <p>Kraken2Krona: Input for Kraken2Krona plugin is an output file of Kraken2Translate which is a .Kraken2 file format and the output is in [.krona] format. Kraken2 Krona  Maps the sequences of non-human taxa into biological classification.</p>
 		<p>Input Plugin format is written as below</p>
 	<pre style="background-color:yellow;">plugin Kraken2Krona  inputfile output.kraken2 outputfile output.krona</pre> 
-		<p>Output is shown as below </p>
-					     
-	 <iframe src=“Kraken2Krona.png" width="100%" height="300px"></iframe>
+		<p>Output is shown as below </p>			     
+	 <img src=“Kraken2Krona.png" width="100%" height="300px"></img>
+	  
 	<p>KronaTree: Input for KronaTree plugin is an output file from Kraken2Krona which is a .krona file format and the output is text file format with the syntax name output. This Plugin Maps into biological classification separately into Kingdom, Phylum, class, order , Family genus, Species,strain. </p>
 		 <p>Input Plugin format is written as below</p>
 	 <pre style="background-color:yellow;">plugin KronaTree inputfile output.krona outputfile output</pre> 
