--- a/index.html
+++ b/index.html
@@ -221,6 +221,11 @@ Machine Learning (with taxa abundances as features)
 <p><a href="https://www.nature.com/articles/s41586-020-2095-1">Microbiome analyses of blood and tissues suggest cancer
 diagnostic approach | Nature</a></p>
 
+
+<h3>Akshitha Thorthi</h3>
+<p>Florida International University</p>
+<p>Master's in Data Science</p>
+<p>6322962</p>
 </body>
 </html>
   
