--- a/index.html
+++ b/index.html
@@ -4,15 +4,9 @@
   <head>
     <title>Building Pipeline for Bioinformatics Data using PluMA </title>
  </head>
-	<body>
-		<style>
-body {
-  background-image: url('micro.jpeg');
-}
-</style>
-<h1><b>Building Pipeline for Bioinformatics Data using PluMA</b></h1>
-	</body>
-	<body>
+	
+<h1 style="background-color:Gold;">Building Pipeline for Bioinformatics Data using PluMA</h1>
+
 <h2><b> OVERVIEW AND BACKGROUND </b></h2>
       <p>The objective of PluMA is to make it easy for developers to create adaptable and lightweight analysis pipelines. These pipelines allow developers to incorporate new algorithms in their preferred programming language and debug them alongside other stages in the pipeline that might use different file formats and programming languages. To achieve this goal, PluMA uses plugins which are available in a large collection in its plugin pool. These plugins are written in various programming languages and can be executed sequentially to form a pipeline. PluMA allows users to easily add, remove, or replace plugins using its user interface. Since plugins are dynamically loaded, users can download PluMA and only the plugins they require from the plugin pool to assemble their pipeline. Furthermore, PluMA provides plugins for both CPU and GPU implementations.</p>
 <hr>
